fix cards gap

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,6 @@ header{
         width: 340px;
     }
     .cards-container{
-        gap: 10vw;
+        gap: 7vh;
     }
 }
